[metadata]
name = NN Toolbox
description = deep learning toolbox
author = Davide Belfiori

[options]
package_dir=
    =src
packages=find:
install_requires=
    numpy
    scipy
    matplotlib
    tensorflow
    tensorflow-addons
python_requires= >=3.8
zip_safe=False

[options.packages.find]
where=src

[options.extras_require]
testing=
    pytest

[options.packages_data]
nn = py.typed
nn_modules = py.typed
utils = py.typed
